<resources>
    <string name="app_name">WS1 Info Viewer</string>
    <string name="app_version">0.0.0</string>

    <string name="tenant_name_label">Tenant Name</string>
    <string name="tenant_domain">Tenant Domain</string>
    <string name="initial_tenant_string">.vmwareidentity.com</string>
    <string name="admin_user_name">Admin Username</string>
    <string name="admin_user_password">Admin Password</string>
    <string name="admin_user_name_hint">Enter Admin User Name</string>
    <string name="button_save_string">Save</string>
    <string name="button_connect_string">Connect</string>
    <string name="button_list_users">List Users</string>
    <string name="tenant_url_label">Tenant URL</string>
    <string name="application_version_label">Version:</string>
    <string name="application_version_text">1.2</string>

    <string name="user_detail_back_text">User List</string>
    <string name="user_full_name_text">Full Name</string>
    <string name="user_domain">User Domain</string>
    <string name="user_id">User ID</string>
    <string name="user_upn">UPN</string>
    <string name="user_list_title">User List</string>

    <string name="about_dialog_information">This is a simple application that connects to a Workspace ONE instance if provided the appropriate credentials.  The settings of this application can be configured using Android for Enterprise App Config.</string>
    <string name="about_text_string">About</string>

    <string name="connection_success">Health Check Successful Connection</string>
    <string name="connection_failed">Health Check Connection Failed</string>
    <string name="auth_token_success">Obtained Auth Token</string>
    <string name="auth_token_failed">Error Retrieving Auth Token</string>
    <string name="build_number">Build Number</string>
    <string name="version_string">Workspace ONE InfoViewer Version: </string>

    <string name="vidm_domain">.vmwareidentity.com</string>

    <string name="invalid_user_name">Username is Invalid</string>
    <string name="invalid_user_password">Password is Invalid</string>
    <string name="invalid_tenant_information">Tenant Information is Invalid</string>

    <string name="tenant_name_key">Tenant Name</string>
    <string name="tenant_name_description">Enter your Workspace ONE Tenant Name</string>
    <string name="restrictions_pending_block_user">The application is waiting for configuration information.</string>

    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string-array name="tenant_options">
        <item>vmwareidentity.com</item>
        <item>vidmpreview.com</item>
        <item>vmwareidentity.com.au</item>
        <item>vmwareidentity.eu</item>
        <item>vmwareidentity.asia</item>
    </string-array>

</resources>
